--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node out/app.js",
-    "build": "tsc -p . && npm test",
+    "build": "tsc -p .",
     "test": "mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "author": "",
