--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.170",
     "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.0",
     "@types/nodemon": "^1.19.0",
     "body-parser": "^1.19.0",
